# Eventio

./: .gitignore  LICENSE  README.md  build.sh  development.txt  package-lock.json  package.json  production.txt  pyproject.toml  tailwind.config.js
.github/workflows/: django.yml
Eventio/core/: asgi.py  urls.py  wsgi.py
Eventio/core/settings/: base.py  local.py  production.py
Eventio/events/: adapters.py  admin.py  apps.py  forms.py  helpers.py  models.py  payment.py  signals.py  tests.py  urls.py  views.py
Eventio/events/migrations/: 0001_initial.py  0002_alter_review_options.py  0003_purchase_amount_paid_purchase_event_name.py  0004_purchase_event_name.py
Eventio/events/models/: __init__.py  events.py  purchase.py  registration.py  review.py  ticket.py
Eventio/events/templates/: about.html  account.html  account_delete.html  contact.html  event_create.html  event_delete.html  event_detail.html  event_form.html  event_list.html  event_search.html  event_update.html  purchase_detail.html  thanks.html  ticket_buy.html
Eventio/events/templates/modals/: delete_modal.html
Eventio/events/templatetags/: helpers.py
Eventio/events/tests/: test_models.py  test_views.py
Eventio/events/views/: __init__.py  account.py  event.py  review.py
Eventio/static/css/: input.css  main.css  output.css
Eventio/templates/: alert.html  base.html  footer.html  navbar.html
Eventio/templates/account/: email_change.html  login.html  password_reset.html  signup.html
Eventio/templates/socialaccount/: base_entrance.html  login.html
(+18 files in other folders)
