[project]
name = "Eventio"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argon2-cffi>=25.1.0",
    "argon2-cffi-bindings>=21.2.0",
    "asgiref>=3.8.1",
    "brotli>=1.1.0",
    "certifi>=2024.8.30",
    "cffi>=1.17.1",
    "charset-normalizer>=3.3.2",
    "cloudinary>=1.41.0",
    "cryptography>=43.0.1",
    "django>=5.1.1",
    "django-allauth>=64.2.1",
    "django-cloudinary-storage>=0.3.0",
    "django-debug-toolbar>=4.4.6",
    "django-htmx>=1.19.0",
    "django-widget-tweaks>=1.5.0",
    "gunicorn>=23.0.0",
    "idna>=3.8",
    "oauthlib>=3.2.2",
    "pillow>=10.4.0",
    "psycopg>=3.2.1",
    "psycopg-binary>=3.2.1",
    "pycparser>=2.22",
    "pyjwt>=2.9.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "requests-oauthlib>=2.0.0",
    "six>=1.16.0",
    "sqlparse>=0.5.1",
    "stripe>=12.2.0",
    "typing-extensions>=4.12.2",
    "tzdata>=2024.1",
    "urllib3>=2.2.2",
    "whitenoise>=6.7.0",
]

[tool.ruff]
line-length = 100
